Add existing files

--- a/gvv/main_hindi.tex
+++ b/gvv/main_hindi.tex
@@ -336,21 +336,19 @@ literate = {-}{-}1
 
 \section{छन्द}
 \input{chapters/chand.tex}
-\section{मात्रा एवं गण}
-\subsection{मात्रा}
- वर्ण के उच्चारण में जो समय लगता है उसे मात्रा कहते हैं। मात्रा २ प्रकार की होती है लघु और गुरु। ह्रस्व उच्चारण वाले वर्णों की मात्रा लघु होती है तथा दीर्घ उच्चारण वाले वर्णों की मात्रा गुरु होती है। लघु मात्रा का मान १ होता है और उसे। चिह्न से प्रदर्शित किया जाता है। इसी प्रकार गुरु मात्रा का मान २ होता है और उसे ऽ चिह्न से प्रदर्शित किया जाता है।
-\subsection{गण}
-मात्राओं और वर्णों की संख्या और क्रम की सुविधा के लिये तीन वर्णों के समूह को एक गण मान लिया जाता है। गणों की संख्या ८ है - यगण (।ऽऽ), मगण (ऽऽऽ), तगण (ऽऽ।), रगण (ऽ।ऽ), जगण (।ऽ।), भगण (ऽ।।), नगण (।।।) और सगण (।।ऽ)।
+\section{गण}
+\input{chapters/gan.tex}
+%\subsection{मात्रा}
 
 
 
-\section{चौपाई}
-चौपाई मात्रिक सम छन्द का एक भेद है। प्राकृत तथा अपभ्रंश के १६ मात्रा के वर्णनात्मक छन्दों के आधार पर विकसित हिन्दी का सर्वप्रिय और अपना छन्द है। गोस्वामी तुलसीदास ने रामचरित मानस में चौपाइ छन्द का बहुत अच्छा निर्वाह किया है \cite{chalisa}। चौपाई में चार चरण होते हैं, प्रत्येक चरण में १६-१६ मात्राएँ होती हैं तथा अन्त में गुरु होता है। \cite{chalisa} की प्रथम चौपाई निम्नलिखित है। 
+%\section{चौपाई}
+%चौपाई मात्रिक सम छन्द का एक भेद है। प्राकृत तथा अपभ्रंश के १६ मात्रा के वर्णनात्मक छन्दों के आधार पर विकसित हिन्दी का सर्वप्रिय और अपना छन्द है। गोस्वामी तुलसीदास ने रामचरित मानस में चौपाइ छन्द का बहुत अच्छा निर्वाह किया है \cite{chalisa}। चौपाई में चार चरण होते हैं, प्रत्येक चरण में १६-१६ मात्राएँ होती हैं तथा अन्त में गुरु होता है। \cite{chalisa} की प्रथम चौपाई निम्नलिखित है। 
 
 
 %\section{Nomenclature}
-\section{चौपाई}
-\input{chapters/doha.tex}
+%\section{चौपाई}
+%\input{chapters/doha.tex}
 
 %\end{devanagari}
 \bibliography{IEEEabrv,hindi}
